	R Core Team's copyright.

	* NEWS: added a `NEWS.Rd` file to document high-level changes to
	permute. Detailed changes remain in `ChangeLog`, whilst `NEWS.Rd`
	will summarise the main user-level changes to the package.

	* allPerms: fix a bug where the blocks of permutations were being
	recombined in the wrong way, by rows instead of by columns.

Version 0.7-8

	* how, Plots: enforces that `blocks` and `strata` are factors, or
	can be coerced to a factor via `as.factor()`, if specified.

	* check: gains a new argument `quietly = FALSE` to suppress messages
	about updates to the permutation design when they are not needed.

	* allPerms: no longer allows  messages about generating set of
	permutations to be generated by `check()`. It calls `check()` now
	with `quietly = TRUE` to achieve this.

	* shuffleSet: played about a bit with the way the design is printed
	if you show the matrix of permutations.

Version 0.7-7

	* shuffleSet: Implemented an idea of Jari's to allow `check()` and
	`allPerms()` to do their thing and possibly generate the set of all
	permutations, rather than turn off checking. If that now results in
	more than `nset` permutations, `shuffleSet` randomly takes `nset` of
	these. This is a nice suggestion as it avoids the problem that with
	small numbers of possible permutations, you can randomly draw the
	same permutation more than once.

	As I have added this feature, I reverted some earlier changes to the
	documentation that used the `check = FALSE` in their call to
	`shuffleSet()`. The `check` argument is retained though, as a way for
	function writers to skip that part of the permute workflow if desired.

	The permutation matrix returned is now of class `"permutationMatrix"`.
	This class has `as.matrix()` and `print()` S3 methods.

	* allPerms: gains an argument `check`, which defaults to `TRUE`. This
	is used to turn off checking within `allPerms` if desired. A use-case
	for this is in `check()`, which might end up caling `allPerms()` to